# CrystalReasoner

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
assets/: .gitignore
assets/MP/: README.md  split.json  split_cte.json  split_cte_full.json  split_elastic.json  split_elastic_full.json  split_full.json  split_generation.json  split_generation_cte.json  split_generation_elastic.json  split_generation_one.json  split_rl.json  split_small_atoms.json
assets/cdvae/: README.md  split.json
checkpoints_merged/energy_as_reward_async/: test.parquet
checkpoints_merged/no_thinking/: test.parquet
checkpoints_merged/rl_no_thinking/: test.parquet
checkpoints_merged/rl_thinking/: spacegroup+thinking.parquet  test.parquet
checkpoints_merged/spacegroup_thinking/: test.parquet
checkpoints_merged/thinking/: test.parquet
crysreas/: __init__.py
crysreas/data/: compare_with_cdvae.py  download.py  generate_split.py  view.py
crysreas/experiment/: __init__.py  cte_reward_comparison.csv  different_rewards_comparison.csv  elastic_reward_comparison.csv  export.py  export2.py  make_graph.py  model_comparison_metrics.csv  model_comparison_metrics_novel.csv  sample_1024.parquet  sample_256_elastic.csv  sample_32_elastic_stratified.csv  sample_32_elastic_stratified_re.parquet  sample_512.csv  sample_512.parquet  sample_512_elastic.parquet  spacegroup_consistency_specific_comparison.csv
crysreas/metric_process/: __init__.py  __main__.py  basic.py  cli.py  config.py  helpers.py  io.py  main_process.py  registry.py
crysreas/mlip/: __init__.py  cte.py  elastic.py  elastic_api.py  energy.py  inseg.py  models.py  old_cte.py  relax.py  rewards.py  sun.py
crysreas/trainer/: README.md  crystal_dataset.py  crystal_dataset_rl.py  dpo_dataset.py  dpo_loss.py  fake_process.py  fsdp_dpo_trainer.py  (+7 more)
doc/: CHECKPOINTS.md  DATASET.md  METRICS.md  TRAINING.md
scripts/: __init__.py  config.py  model_infer.py  pipeline.sh  pipeline_crystaltextllm.sh  pipeline_crystaltextllm_8.sh  pipeline_cte.sh  pipeline_no_thinking.sh  pipeline_plaid_wyckoff.sh  pipeline_plaid_wyckoff_8.sh  pipeline_thinking.sh  run.py  run_pipeline.py  slurm_run_pipeline.py  update_hf.py  upload_hf.py
submodules/mattergen/: README.md  pyproject.toml
submodules/mattergen/data-release/alex-mp/: .gitignore
submodules/mattergen/mattergen/: generator.py
submodules/mattergen/mattergen/common/data/: collate.py  types.py
submodules/mattergen/mattergen/common/utils/: data_classes.py
submodules/mattergen/mattergen/conf/lightning_module/diffusion_module/model/property_embeddings/: dft_bulk_modulus.yaml
submodules/mattergen/mattergen/diffusion/corruption/: corruption.py
submodules/mattergen/mattergen/diffusion/sampling/: classifier_free_guidance.py
submodules/mattergen/mattergen/evaluation/: evaluate.py
submodules/mattergen/mattergen/evaluation/metrics/: energy.py
submodules/mattergen/mattergen/evaluation/reference/: reference_dataset_serializer.py
submodules/mattergen/mattergen/evaluation/utils/: dataset_matcher.py  metrics_structure_summary.py  relaxation.py
submodules/mattergen/mattergen/scripts/: generate.py
submodules/torch-sim/: .coderabbit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  citation.cff  codecov.yml  pyproject.toml
submodules/torch-sim/.github/: PULL_REQUEST_TEMPLATE.md  release.yml
submodules/torch-sim/.github/workflows/: docs.yml  link-check-config.json  link-check.yml  stale.yml  test.yml
submodules/torch-sim/docs/: conf.py  index.md
submodules/torch-sim/docs/_static/: draw_pkg_treemap.py
submodules/torch-sim/docs/about/: license.md
submodules/torch-sim/docs/dev/: add_model.md  dev_install.md
submodules/torch-sim/docs/reference/: index.rst
submodules/torch-sim/docs/tutorials/: index.rst
submodules/torch-sim/docs/user/: introduction.rst  overview.md
submodules/torch-sim/examples/: readme.md
submodules/torch-sim/examples/scripts/: 1_introduction.py  2_structural_optimization.py  3_dynamics.py  4_high_level_api.py  5_workflow.py  6_phonons.py  7_others.py  readme.md
submodules/torch-sim/examples/tutorials/: autobatching_tutorial.py  diff_sim.py  high_level_tutorial.py  hybrid_swap_tutorial.py  low_level_tutorial.py  metatomic_tutorial.py  reporting_tutorial.py  state_tutorial.py  using_graphpes_tutorial.py
submodules/torch-sim/tests/: conftest.py  test_autobatching.py  test_constraints.py  test_correlations.py  test_elastic.py  test_fix_symmetry.py  test_integrators.py  test_io.py  test_math.py  test_monte_carlo.py  test_neighbors.py  test_optimizer_states.py  test_optimizers.py  test_optimizers_vs_ase.py  test_quantities.py  test_runners.py  test_state.py  test_trajectory.py  test_transforms.py  test_voigt.py
submodules/torch-sim/tests/models/: conftest.py  test_fairchem.py  test_fairchem_legacy.py  test_graphpes.py  test_lennard_jones.py  test_mace.py  test_mattersim.py  test_metatomic.py  test_morse.py  test_nequip_framework.py  test_orb.py  test_sevennet.py  test_soft_sphere.py
submodules/torch-sim/tests/workflows/: test_a2c.py
submodules/torch-sim/torch_sim/: __init__.py  autobatching.py  constraints.py  elastic.py  io.py  math.py  monte_carlo.py  quantities.py  runners.py  state.py  symmetrize.py  testing.py  trajectory.py  transforms.py  typing.py  units.py
submodules/torch-sim/torch_sim/integrators/: __init__.py  md.py  npt.py  nve.py  nvt.py
submodules/torch-sim/torch_sim/models/: __init__.py  fairchem.py  fairchem_legacy.py  graphpes.py  interface.py  lennard_jones.py  mace.py  mattersim.py  metatomic.py  morse.py  nequip_framework.py  orb.py  particle_life.py  sevennet.py  soft_sphere.py
submodules/torch-sim/torch_sim/neighbors/: __init__.py  alchemiops.py  standard.py  torch_nl.py  vesin.py
submodules/torch-sim/torch_sim/optimizers/: __init__.py  bfgs.py  cell_filters.py  fire.py  gradient_descent.py  lbfgs.py  state.py
submodules/torch-sim/torch_sim/properties/: __init__.py  correlations.py
submodules/torch-sim/torch_sim/workflows/: __init__.py  a2c.py  readme.md
(+2026 files in other folders)
